chore: Initial project refactor for production readiness
This foundational commit introduces a wide range of improvements across the entire project to enhance security, maintainability, and performance.

### Security & Auditing
- Implements field-level encryption (AES) for sensitive data in User and MedicalFile entities.
- Adds a comprehensive audit trail using Spring AOP (@AuditLog) for all sensitive data operations.
- Sanitizes pplication.properties to use environment variables for all secrets (DB credentials, API keys, etc.).
- Creates a .env.example file to document required environment variables.
- Strengthens the .gitignore file to prevent accidental secret leakage.

### Code Quality & Maintainability
- Refactors hardcoded subcategory logic into a dynamic, configuration-based approach (SubcategoryConfig).
- Replaces all System.out.println statements with structured SLF4J logging.
- Adds comprehensive Javadoc-style comments to all classes and methods.
- Creates a detailed README.md with setup instructions, tech stack, and a user journey.

### Performance & Data Integrity
- Introduces caching (@Cacheable) for the user service to reduce database load.
- Adds database indexes to entities for faster query performance.
- Prevents orphan data scenarios by enabling orphanRemoval on key entity relationships.

### Testing
- Adds initial unit tests for the AuthService to establish a testing foundation.