@@ -1,5 +1,6 @@
 package com.Sehaty.Sehaty.controller;
 
+import com.Sehaty.Sehaty.config.SubcategoryConfig;
 import com.Sehaty.Sehaty.dto.MedicalFileResponseDTO;
 import com.Sehaty.Sehaty.dto.MedicalFileUploadRequestDTO;
 import com.Sehaty.Sehaty.service.MedicalFileService;
@@ -13,19 +14,33 @@ import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
+/**
+ * Controller for handling medical file management endpoints.
+ * Includes uploading, retrieving, and deleting medical files.
+ */
 @RestController
-@RequestMapping("/api/medical-files")
+@RequestMapping("/medical-files")
 @RequiredArgsConstructor
 public class MedicalFileController {
 
     private final MedicalFileService medicalFileService;
+    private final SubcategoryConfig subcategoryConfig;
 
+    /**
+     * Uploads a new medical file.
+     *
+     * @param userDetails The authenticated user's details.
+     * @param file The file to upload.
+     * @param requestDTO DTO containing metadata for the file.
+     * @return ApiResponse with details of the uploaded file.
+     */
     @PostMapping("/upload")
     public ResponseEntity<ApiResponse> uploadFile(
-            @AuthenticationPrincipal UserDetails userDetails,
+           @AuthenticationPrincipal UserDetails userDetails,
             @RequestParam("file") MultipartFile file,
             @Valid @ModelAttribute MedicalFileUploadRequestDTO requestDTO) {
 
@@ -36,6 +51,12 @@ public class MedicalFileController {
                 .body(new ApiResponse(true, "تم رفع الملف بنجاح", responseDTO));
     }
 
+    /**
+     * Retrieves all medical files for the authenticated user.
+     *
+     * @param userDetails The authenticated user's details.
+     * @return ApiResponse containing a list of the user's medical files.
+     */
     @GetMapping("/AllFiles")
     public ResponseEntity<ApiResponse> getAllFilesByUser(@AuthenticationPrincipal UserDetails userDetails) {
 
@@ -46,7 +67,14 @@ public class MedicalFileController {
         );
     }
 
-    @GetMapping("/file")
+    /**
+     * Retrieves a specific medical file by its ID.
+     *
+     * @param fileId The ID of the file to retrieve.
+     * @param userDetails The authenticated user's details.
+     * @return ApiResponse containing the requested file's details.
+     */
+    @GetMapping("/file/{fileId}")
     public ResponseEntity<ApiResponse> getFileById(
             @PathVariable UUID fileId,
             @AuthenticationPrincipal UserDetails userDetails) {
@@ -58,7 +86,14 @@ public class MedicalFileController {
         );
     }
 
-    @DeleteMapping("/deleteFile")
+    /**
+     * Deletes a specific medical file by its ID.
+     *
+     * @param fileId The ID of the file to delete.
+     * @param userDetails The authenticated user's details.
+     * @return ApiResponse confirming successful deletion.
+     */
+    @DeleteMapping("/deleteFile/{fileId}")
     public ResponseEntity<ApiResponse> deleteFile(
             @PathVariable UUID fileId,
             @AuthenticationPrincipal UserDetails userDetails) {
@@ -70,24 +105,15 @@ public class MedicalFileController {
         );
     }
 
+    /**
+     * Retrieves subcategories for a given medical file category.
+     *
+     * @param category The main category (e.g., RADIOLOGY, LABS).
+     * @return ApiResponse containing a list of subcategories.
+     */
     @GetMapping("/categories/{category}/subcategories")
     public ResponseEntity<ApiResponse> getSubcategoriesByCategory(@PathVariable String category) {
-        List<String> subcategories;
-
-        switch (category.toUpperCase()) {
-            case "RADIOLOGY":
-                subcategories = List.of("أشعة سينية", "أشعة مقطعية", "رنين مغناطيسي", "أشعة تليفزيونية");
-                break;
-            case "LABS":
-                subcategories = List.of("تحليل دم", "تحليل بول", "تحليل سكر", "تحليل وظائف كبد");
-                break;
-            case "REPORTS":
-                subcategories = List.of("روشتة", "تقرير طبي", "نتائج متابعة");
-                break;
-            default:
-                subcategories = List.of("أخرى");
-        }
-
+        List<String> subcategories = subcategoryConfig.getSubcategories().getOrDefault(category.toUpperCase(), Collections.emptyList());
         return ResponseEntity.ok(
                 new ApiResponse(true, "تم إرجاع أنواع الملفات الفرعية بنجاح", subcategories)
         );
